# AOC2022

./: .gitignore  README.md  Util.h  template.cpp
AOC2022/: AOC2022.cpp  AOC2022.sln  AOC2022.vcxproj  AOC2022.vcxproj.filters  Day20.cpp  Day20.h  Day21.cpp  Day21.h  Util.h  example20_02.txt  resource.h
Day1/: day1.cpp
Day10/: day10.cpp  template.cpp
Day10/UI/: CMakeLists.txt  CMakeSettings.json  main.cpp
Day10/UI/libraries/: CMakeLists.txt  raygui.h
Day11/: day11.cpp  template.cpp
Day12/: beautiful.cpp  day12.cpp  day12_beautiful.cpp  template.cpp
Day13/: day13.cpp  template.cpp
Day14/: day14.cpp  template.cpp
Day15/: day15.cpp  template.cpp  template01.cpp
Day16/: day16.cpp  template.cpp
Day17/: day17.cpp
Day19/: day19.cpp
Day2/: day2.cpp
Day20/: day20.cpp
Day3/: day3.cpp
Day5/: day5.cpp  template.cpp
Day6/: day6.cpp  template.cpp
Day7/: day7.cpp  template.cpp
Day8/: day8.cpp  template.cpp
Day9/: day9.cpp  template.cpp
template/: template.cpp
utils/: Util.h
